# scooter

./: .gitignore  .pre-commit-config.yaml  ARTIFACT_EVAL.md  Cargo.toml  Makefile  README.md  examples.md  run-tests.sh  tra.smt2
bench/postfriend/: Cargo.toml  policy.txt
bench/postfriend/src/: bench.rs  client.rs  main.rs
case-studies/admin_changes/: 0.mig  policy.txt
case-studies/bibifi/: Cargo.toml  autocannon_enforcement.txt  autocannon_noenforcement.txt  bench.sh  policy.txt
case-studies/bibifi-history/: 01-update-config-models.mig  02-updated-models.mig  03-make-fix-it-end-after-break-it.mig  04-update-git-repo-id-handling-in-webapp.mig  05-drop-fix-name-field.mig  06-updated-schema-for-break-fix.mig  07-load-break-json-in-db-in-webhook.mig  08-store-submissions-in-db.mig  10-move-stdout-and-stderr-back.mig  11-add-withdrawn-field-to-break-submissions.mig  policy.txt
case-studies/bibifi/enforcement/: account  announcements
case-studies/bibifi/noenforcement/: account  announcements
case-studies/bibifi/src/: main.rs  session.rs
case-studies/bibifi/templates/: announcements.hbs  layout.hbs  profile.hbs
case-studies/bugzilla/: policy.txt
case-studies/gitlab/: policy.txt
case-studies/hails-task/: 0.mig  policy.txt
case-studies/hails/gitstar/: 0-gitstar-reader.mig  policy.txt
case-studies/hails/lambdachair/: 0-lambdachair-papers-reviews.mig  policy.txt
case-studies/hails/lbh/: 0-add-users.mig  1-add-tags.mig  2-tags-db.mig  3-collaborators.mig  4-only-usercreate-can-create-users.mig  policy.txt
case-studies/hotcrp/: 0.mig  policy.txt
case-studies/lifty-conference/: 0.mig  policy.txt
case-studies/micro/admin-level/: 0-admin-level.mig  migration-0.mig  policy.txt
case-studies/micro/bioflow/: 0-add-bio-safe.mig  policy.txt
case-studies/micro/postfriend/: 0-broken-simplify.mig  policy.txt
case-studies/paper/: 0.mig  policy.txt
case-studies/tryin-out/: 0.mig  policy.txt
case-studies/ur-calendar/: 0.mig  policy.txt
case-studies/visit-day/: 0-user-invitable.mig  1-admins.mig  2-people.mig  3-schedule-items.mig  4-PeopleScheduleItem.mig  5-person-kind.mig  6-add-group-event.mig  7-event-locations.mig  8-rename-group-to-global.mig  9-event-link.mig  migration-0.mig  policy.txt
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  project.rs
dockerfiles/: Dockerfile
enforcement/: Cargo.toml
enforcement/enforcement-macros/: Cargo.toml
enforcement/enforcement-macros/src/: lib.rs
enforcement/example-project/: .gitignore  Cargo.toml  Makefile  policy.txt
enforcement/example-project/src/: main.rs  types.rs
enforcement/migrate/: Cargo.toml  policy.txt
enforcement/migrate/src/: lib.rs  main.rs  migrate.rs
enforcement/migrate/src/tests/: types.rs
enforcement/src/: from_bson.rs  lib.rs  translate.rs
migration-lang/: Cargo.toml
migration-lang/src/: ast.rs  lib.rs  parser.lalrpop
mongodb-enforcement/: Cargo.toml  README.md
mongodb-enforcement/enforcement-macros/: Cargo.toml
mongodb-enforcement/enforcement-macros/src/: lib.rs
mongodb-enforcement/example-project/: Cargo.toml  build.rs  policy.txt
mongodb-enforcement/example-project/src/: main.rs
mongodb-enforcement/src/: lib.rs  translate.rs
mongodb-migrate/: Cargo.toml  policy.txt
mongodb-migrate/src/: lib.rs  migrate.rs
policy-lang/: Cargo.toml
policy-lang/src/: ast.rs  ir.rs  lib.rs  parser.lalrpop
policy-lang/src/ir/: expr.rs  lower.rs  migration.rs  policy.rs  schema.rs  ty.rs
policy-lang/tests/: migrations.rs  policies.rs
scripts/: policy.1.txt  policy.10.txt  policy.2.txt  policy.3.txt  policy.4.txt  policy.5.txt  policy.6.txt  policy.7.txt  policy.8.txt  policy.9.txt  run_case_study.sh  run_migs_on_policy.py  summarize.sh  visit-day.sh  z3_tee.sh
static-checker/: Cargo.toml  README.md  check.smt2  run-example.sh  tra.smt2
static-checker/examples/branching-policy-message/: after.txt  before.txt
static-checker/examples/clashing-records/: before.txt
static-checker/examples/simple-message-refine/: after.txt  before.txt
static-checker/examples/simple-user/: after.txt
static-checker/examples/simple-user-leaky/: after.txt  before.txt
static-checker/migrate-policy/: Cargo.toml
static-checker/migrate-policy/src/: lib.rs  main.rs
static-checker/src/: lib.rs  migrate.rs  naive_smt.rs  query.rs  relation.rs  smt.rs  smt2.rs
static-checker/src/naive_smt/: translate.rs
static-checker/src/smt/: translate.rs
static-checker/src/smt2/: translate2.rs
static-checker/tests/: smt.rs
web-demo/: Cargo.toml  build.rs  index.html
web-demo/src/: main.rs
web-demo/static/: examples.js  index.html  syntax_highlighting.js
web-demo/static/css/: theme.css
web-demo/static/playground/: examples.js  index.html  syntax_highlighting.js
web-demo/wasm-validator/: Cargo.toml
web-demo/wasm-validator/src/: lib.rs
