[package]
name = "cli"
version = "0.1.0"
authors = ["John Renner <john@jrenner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4.10"
migrate = {path="../enforcement/migrate"}
static-checker = {path="../static-checker"}