[package]
name = "cli"
version = "0.1.0"
authors = ["John Renner <john@jrenner.net>"]
edition = "2018"

# Here's an example of a TOML "array of tables" section, in this case specifying
# a binary target name and path.
[[bin]]
name = "migrate"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
chrono = "0.4.10"
migrate = {path="../enforcement/migrate"}
static-checker = {path="../static-checker"}
toml = "0.5.6"
