[package]
name = "migration-lang"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"
id-arena = "2.2.1"
policy-lang = {path = "../policy-lang"}

mongodb = '0.3.12'
migration-macros = {path="./migration-macros"}
serde = { version = "1.0", features = ["derive"] }
