[package]
name = "migrate"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = '0.9.0'
policy-lang = {path = "../policy-lang"}
bson = "0.14.0"
chrono = "*"
serde = "*"

[dev-dependencies]
enforcement = {path="../mongodb-enforcement"}

[build-dependencies]
enforcement = {path = "../mongodb-enforcement"}
