[package]
name = "policy-lang"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = {version="0.19.0", features=["lexer"]}

[dependencies]
lalrpop-util = "0.19.0"
regex = "1.3.1"
id-arena = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"
