[package]
name = "static-checker"
version = "0.1.0"
authors = ["John Renner <john@jrenner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "gen"
path = "src/bin/gen.rs"


[dependencies]
policy-lang = {path = "../policy-lang"}