[package]
name = "static-checker"
version = "0.1.0"
authors = ["John Renner <john@jrenner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
naive-smt = []
static-link-z3 = ["z3-sys/static-link-z3"]

[dependencies]
policy-lang = {path = "../policy-lang"}
chrono = "*"
lazy_static = "*"
regex = "1"
z3-sys = "*"
