[package]
name = "postfriend"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
enforcement = {path="../../mongodb-enforcement"}

[dependencies]
mongodb = '0.9.0'
enforcement = {path="../../mongodb-enforcement"}
bson = "0.14.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"

[[bin]]
name = "postfriend-server"
path = "src/main.rs"

[[bin]]
name = "postfriend-client"
path = "src/client.rs"

[[bin]]
name = "postfriend-bench"
path = "src/bench.rs"
