[package]
name = "bibifi"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

[[bin]]
name = "seed"
test = false
bench = false

[build-dependencies]
enforcement = {path="../../mongodb-enforcement"}

[dependencies]
enforcement = {path="../../mongodb-enforcement"}
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"
lazy_static = "*"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.7"
features = ["handlebars_templates"]

[[bin]]
name = "main"
path = "src/main.rs"
