[package]
name = "example-project"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = '0.3.12'
enforcement = {path=".."}

[[bin]]
name = "main"
path = "src/main.rs"
