[package]
name = "migrate"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrate"
path = "src/main.rs"

[dependencies]
mongodb = '0.3.12'
policy-lang = {path = "../../policy-lang"}
migration-lang = {path = "../../migration-lang"}
enforcement = {path=".."}

[build-dependencies]
enforcement = {path = ".."}
