[package]
name = "migrate"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrate"
path = "src/main.rs"

[dependencies]
mongodb = '0.9.0'
policy-lang = {path = "../../policy-lang"}
bson = "0.14.0"

[dev-dependencies]
enforcement = {path=".."}

[build-dependencies]
enforcement = {path = ".."}
