[package]
name = "example-project"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
enforcement = {path=".."}

[dependencies]
mongodb = '0.9.0'
enforcement = {path=".."}
bson = "0.14.0"

[[bin]]
name = "main"
path = "src/main.rs"
