[package]
name = "migrate-policy"
version = "0.1.0"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "migrate-policy"
path = "src/main.rs"

[dependencies]
policy-lang = {path = "../../policy-lang"}
